--- a/scss/main__actividades.scss
+++ b/scss/main__actividades.scss
@@ -14,12 +14,13 @@
             background-color: rgba(0, 0, 0, 0.767);
             z-index: 100;
             .titulo__act {
-                font-size: 5rem; 
+                font-size: map-get($map: $titulos, $key: "mayor");
                 font-family: 'Playfair Display', serif;
                 letter-spacing: 2vw;
+                margin: 2.5%;
             }
             .slogan__act {
-                font-size: 2rem;
+                font-size: map-get($map: $titulos, $key: "mayor")/3;
                 font-family: 'Playfair', serif;
                 margin: 5px 5px 40px 5px;
             }
